--- a/BlazorFluxorSample/Shared/MainLayout.razor
+++ b/BlazorFluxorSample/Shared/MainLayout.razor
@@ -1,10 +1,12 @@
-﻿@inherits LayoutComponentBase
+﻿@using BlazorFluxorSample.Components
+@inherits LayoutComponentBase
 
 <PageTitle>BlazorFluxorSample</PageTitle>
 
 <div class="page">
     <div class="sidebar">
         <NavMenu />
+        <SampleDisplayComponent/>
     </div>
 
     <main>
